Avatar - - fix z-index issue

--- a/packages/ui/src/8-grids/_grid-with-side.scss
+++ b/packages/ui/src/8-grids/_grid-with-side.scss
@@ -34,6 +34,8 @@
   }
 }
 
+.main-content { z-index:1; }
+
 .main-header {
   position:sticky;
   z-index:5;
